--- a/stylesheet.css
+++ b/stylesheet.css
@@ -55,6 +55,36 @@ button {
 	width: 131px;
 	background-image: url("images/title_song.png");
 }
+ul {
+	position: absolute;
+	list-style-type: none;
+	padding: 0;
+	margin: 0;
+	top: 80px;
+}
+ul.song li {
+	width: 300px;
+	height: 40px;
+	margin: 10px;
+}
+ul.song.li:nth-child(1) {
+	background-image: url("imgaes/button_song_01_normal.png");
+}
+ul.song.li:nth-child(2) {
+	background-image: url("imgaes/button_song_02_normal.png");
+}
+ul.song.li:nth-child(3) {
+	background-image: url("imgaes/button_song_03_normal.png");
+}
+ul.song li:nth-child(1):active {
+	background-image: url("imgaes/button_song_01_selected.png");
+}
+ul.song li:nth-child(2):active {
+	background-image: url("imgaes/button_song_02_selected.png");
+}
+ul.song li:nth-child(3):active {
+	background-image: url("imgaes/button_song_03_selected.png");
+}
 #title-seat {
 	top: 240px;
 	width: 112px;
