--- a/stylesheet.css
+++ b/stylesheet.css
@@ -67,13 +67,13 @@ ul.song li {
 	height: 40px;
 	margin: 10px;
 }
-ul.song.li:nth-child(1) {
+ul.song li:nth-child(1) {
 	background-image: url("imgaes/button_song_01_normal.png");
 }
-ul.song.li:nth-child(2) {
+ul.song li:nth-child(2) {
 	background-image: url("imgaes/button_song_02_normal.png");
 }
-ul.song.li:nth-child(3) {
+ul.song li:nth-child(3) {
 	background-image: url("imgaes/button_song_03_normal.png");
 }
 ul.song li:nth-child(1):active {
