--- a/stylesheet.css
+++ b/stylesheet.css
@@ -68,10 +68,10 @@ ul.seat li {
 	display: inline block;
 	width: 84px;
 	height: 83px;
-	margin-left: 50px;
+/*	margin-left: 50px;
 	margin-top: 0px;
 	margin-right: 20px;
-	margin-bottom: -23px; 
+	margin-bottom: 0px; */ 
 }
 ul.seat li:nth-child(1) {
 	background-image: url("images/button_seat_A_normal.png");
