--- a/stylesheet.css
+++ b/stylesheet.css
@@ -100,8 +100,11 @@ ul {
 	list-style-type: none;
 	padding: 0;
 	margin: 0;
-	top: 240px;
+
 }
+ul.seat {
+	top: 300px;
+	}
 ul.seat li {
 	background-size: cover; 
 	background-position: center; 
