--- a/stylesheet.css
+++ b/stylesheet.css
@@ -60,6 +60,8 @@ ul {
 	list-style-type: none;
 	padding: 0;
 	margin: 0;
+}
+ul.song {	
 	top: 80px;
 }
 ul.song li {
@@ -100,7 +102,6 @@ ul {
 	list-style-type: none;
 	padding: 0;
 	margin: 0;
-
 }
 ul.seat {
 	top: 300px;
